--- a/website/marketPlace/index.html
+++ b/website/marketPlace/index.html
@@ -62,7 +62,7 @@
 
           <div class="hero-content">
 
-            <h1 class="h1 hero-title">Unlock Your Achievements, Claim Your <span>NFT</span> Rewards!</h1>
+            <h1 class="h1 hero-title">Unlock Your Achievements, Claim Your <span>Assets</span> & Rewards!</h1>
 
             <p class="hero-text">
               Harnessing Potential, Rewarding Progress
@@ -335,7 +335,8 @@
 
             <h2 class="h2 section-title">Explore Tokens</h2>
 
-            <button class="btn btn-primary">Explore</button>
+            <button class="btn btn-primary">Expl
+              ore</button>
 
           </div>
 
