--- a/website/marketPlace/marketPlace.html
+++ b/website/marketPlace/marketPlace.html
@@ -239,7 +239,7 @@
       <section class="about">
         <div class="container">
 
-          <h2 class="h2 about-title">Unlock your NFTs</h2>
+          <h2 class="h2 about-title">Unlock your Badges & Assets</h2>
 
           <ol class="about-list">
 
@@ -288,10 +288,10 @@
                   <img src="./assets/images/single-create-sell-item-3.png" alt="folder icon">
                 </div>
 
-                <h3 class="h3 about-card-title">Redeem Your NFT's</h3>
+                <h3 class="h3 about-card-title">Redeem Your Rewards</h3>
 
                 <p class="about-card-text">
-                  Congratulations on your progress! Redeem your earned NFTs as a token of your achievements. Each NFT represents a milestone in your learning journey and can be collected and cherished as a symbol of your dedication and hard work.
+                  Congratulations on your progress! Redeem your earned Badges & Assets as a token of your achievements. Each reward represents a milestone in your learning journey and can be collected and cherished as a symbol of your dedication and hard work.
                 </p>
 
               </div>
@@ -333,10 +333,9 @@
 
           <div class="section-header-wrapper">
 
-            <h2 class="h2 section-title">Explore Tokens</h2>
+            <h2 class="h2 section-title">Explore Assets</h2>
 
-            <button class="btn btn-primary">Expl
-              ore</button>
+            <button class="btn btn-primary">Explore</button>
 
           </div>
 
