--- a/website/gamex-master/esport.html
+++ b/website/gamex-master/esport.html
@@ -165,12 +165,14 @@
           <div class="btn-group">
 
             <button class="btn btn-primary">
-              <span>Play</span>
+              <span>
+                <a href="https://simmer.io/@Anhi10/planetarium">Play</a></span>
 
               <ion-icon name="play-circle"></ion-icon>
             </button>
 
-            <button class="btn btn-link">Demo</button>
+            <button class="btn btn-link">
+              <a href="./demoVid.mp4">Demo</a></button>
 
           </div>
 
