--- a/game/index.html
+++ b/game/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <div id="unity-container" class="unity-desktop">
-      <canvas id="unity-canvas" width=960 height=600></canvas>
+      <canvas id="unity-canvas" width=1920 height=1080></canvas>
       <div id="unity-loading-bar">
         <div id="unity-logo"></div>
         <div id="unity-progress-bar-empty">
@@ -58,9 +58,9 @@
       var buildUrl = "Build";
       var loaderUrl = buildUrl + "/UnityGame.loader.js";
       var config = {
-        dataUrl: buildUrl + "/UnityGame.data.unityweb",
-        frameworkUrl: buildUrl + "/UnityGame.framework.js.unityweb",
-        codeUrl: buildUrl + "/UnityGame.wasm.unityweb",
+        dataUrl: buildUrl + "/UnityGame.data.gz",
+        frameworkUrl: buildUrl + "/UnityGame.framework.js.gz",
+        codeUrl: buildUrl + "/UnityGame.wasm.gz",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "My project",
@@ -93,8 +93,8 @@
       } else {
         // Desktop style: Render the game canvas in a window that can be maximized to fullscreen:
 
-        canvas.style.width = "960px";
-        canvas.style.height = "600px";
+        canvas.style.width = "1920px";
+        canvas.style.height = "1080px";
       }
 
       loadingBar.style.display = "block";
