--- a/game/index.html
+++ b/game/index.html
@@ -56,11 +56,11 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/UnityGame.loader.js";
+      var loaderUrl = buildUrl + "/game.loader.js";
       var config = {
-        dataUrl: buildUrl + "/UnityGame.data.gz",
-        frameworkUrl: buildUrl + "/UnityGame.framework.js.gz",
-        codeUrl: buildUrl + "/UnityGame.wasm.gz",
+        dataUrl: buildUrl + "/game.data.gz",
+        frameworkUrl: buildUrl + "/game.framework.js.gz",
+        codeUrl: buildUrl + "/game.wasm.gz",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "My project",
