--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
               <a href="./website/learn/learn.html" class="navbar-link skewBg" data-nav-link>Learn</a>
             </li>
             <li class="navbar-item">
-              <a href="./website/examine/quiz.html" class="navbar-link skewBg" data-nav-link>Examine</a>
+              <a href="./website/quizzes/quiz.html" class="navbar-link skewBg" data-nav-link>Examine</a>
             </li>
 
 
