--- a/website/learn/learn.html
+++ b/website/learn/learn.html
@@ -57,7 +57,7 @@
               <a href="./learn.html" class="navbar-link skewBg" data-nav-link>Learn</a>
             </li>
             <li class="navbar-item">
-              <a href="../examine/quiz.html" class="navbar-link skewBg" data-nav-link>Examine</a>
+              <a href="../quizzes/quiz.html" class="navbar-link skewBg" data-nav-link>Examine</a>
             </li>
 
 
