--- a/website/play/esport.html
+++ b/website/play/esport.html
@@ -75,7 +75,7 @@
           </li>
 
           <li>
-            <a href="../examine/quiz.html" class="navbar-link">Examine</a>
+            <a href="../quizzes/quiz.html" class="navbar-link">Examine</a>
           </li>
 
           <li>
