--- a/website/play/esport.html
+++ b/website/play/esport.html
@@ -152,7 +152,7 @@
 
             <button class="btn btn-primary">
               <span>
-                <a href="../../game/index.html">Play</a></span>
+                <a href="https://simmer.io/@Anhi10/galactic">Play</a></span>
 
               <ion-icon name="play-circle"></ion-icon>
             </button>
