--- a/website/marketPlace/marketPlace.html
+++ b/website/marketPlace/marketPlace.html
@@ -126,7 +126,7 @@
                   <div class="product-footer">
                     <p class="total-bid">10+ Modules Completed</p>
 
-                    <button class="tag">Redeem</button>
+                    <button class="tag">$10</button>
                   </div>
 
                 </div>
@@ -359,7 +359,7 @@
                     </button>
                   </div>
 
-                  <button class="place-bid-btn">Place bid</button>
+                  <button class="place-bid-btn">Redeem</button>
 
                 </figure>
 
@@ -367,34 +367,11 @@
 
                   <a href="#" class="h4 product-title">Dimond riding a blue body art</a>
 
-                  <div class="product-meta">
-
-                    <div class="product-author">
-
-                      <figure class="author-img">
-                        <img src="./assets/images/bidding-user.png" alt="Jack Reacher">
-                      </figure>
-
-                      <div class="author-content">
-                        <h4 class="h5 author-title">Jack R</h4>
-
-                        <a href="#" class="author-username">@jackr</a>
-                      </div>
-
-                    </div>
-
-                    <div class="product-price">
-                      <data value="0.568">57 Modules</data>
-
-                      <p class="label">Current Bid</p>
-                    </div>
-
-                  </div>
 
                   <div class="product-footer">
-                    <p class="total-bid">12+ Place Bid.</p>
+                    <p class="total-bid">12+ Redeem.</p>
 
-                    <button class="tag">Redeem</button>
+                    <button class="tag">$10</button>
                   </div>
 
                 </div>
@@ -421,7 +398,7 @@
                     </button>
                   </div>
 
-                  <button class="place-bid-btn">Place bid</button>
+                  <button class="place-bid-btn">Redeem</button>
 
                 </figure>
 
@@ -429,34 +406,11 @@
 
                   <a href="#" class="h4 product-title">Dimond riding a blue body art</a>
 
-                  <div class="product-meta">
-
-                    <div class="product-author">
-
-                      <figure class="author-img">
-                        <img src="./assets/images/bidding-user.png" alt="Jack Reacher">
-                      </figure>
-
-                      <div class="author-content">
-                        <h4 class="h5 author-title">Jack R</h4>
-
-                        <a href="#" class="author-username">@jackr</a>
-                      </div>
-
-                    </div>
-
-                    <div class="product-price">
-                      <data value="0.568">35 Modules</data>
-
-                      <p class="label">Current Bid</p>
-                    </div>
-
-                  </div>
 
                   <div class="product-footer">
-                    <p class="total-bid">12+ Place Bid.</p>
+                    <p class="total-bid">12+ Redeem.</p>
 
-                    <button class="tag">Redeem</button>
+                    <button class="tag">$10</button>
                   </div>
 
                 </div>
@@ -483,7 +437,7 @@
                     </button>
                   </div>
 
-                  <button class="place-bid-btn">Place bid</button>
+                  <button class="place-bid-btn">Redeem</button>
 
                 </figure>
 
@@ -491,34 +445,11 @@
 
                   <a href="#" class="h4 product-title">Dimond riding a blue body art</a>
 
-                  <div class="product-meta">
-
-                    <div class="product-author">
-
-                      <figure class="author-img">
-                        <img src="./assets/images/bidding-user.png" alt="Jack Reacher">
-                      </figure>
-
-                      <div class="author-content">
-                        <h4 class="h5 author-title">Jack R</h4>
-
-                        <a href="#" class="author-username">@jackr</a>
-                      </div>
-
-                    </div>
-
-                    <div class="product-price">
-                      <data value="0.568">30 Modules</data>
-
-                      <p class="label">Current Bid</p>
-                    </div>
-
-                  </div>
 
                   <div class="product-footer">
-                    <p class="total-bid">12+ Place Bid.</p>
+                    <p class="total-bid">12+ Redeem.</p>
 
-                    <button class="tag">Redeem</button>
+                    <button class="tag">$10</button>
                   </div>
 
                 </div>
@@ -545,7 +476,7 @@
                     </button>
                   </div>
 
-                  <button class="place-bid-btn">Place bid</button>
+                  <button class="place-bid-btn">Redeem</button>
 
                 </figure>
 
@@ -553,34 +484,11 @@
 
                   <a href="#" class="h4 product-title">Dimond riding a blue body art</a>
 
-                  <div class="product-meta">
-
-                    <div class="product-author">
-
-                      <figure class="author-img">
-                        <img src="./assets/images/bidding-user.png" alt="Jack Reacher">
-                      </figure>
-
-                      <div class="author-content">
-                        <h4 class="h5 author-title">Jack R</h4>
-
-                        <a href="#" class="author-username">@jackr</a>
-                      </div>
-
-                    </div>
-
-                    <div class="product-price">
-                      <data value="0.568">25 Modules</data>
-
-                      <p class="label">Current Bid</p>
-                    </div>
-
-                  </div>
 
                   <div class="product-footer">
-                    <p class="total-bid">12+ Place Bid.</p>
+                    <p class="total-bid">12+ Redeem.</p>
 
-                    <button class="tag">Redeem</button>
+                    <button class="tag">$10</button>
                   </div>
 
                 </div>
@@ -607,7 +515,7 @@
                     </button>
                   </div>
 
-                  <button class="place-bid-btn">Place bid</button>
+                  <button class="place-bid-btn">Redeem</button>
 
                 </figure>
 
@@ -615,34 +523,11 @@
 
                   <a href="#" class="h4 product-title">Dimond riding a blue body art</a>
 
-                  <div class="product-meta">
-
-                    <div class="product-author">
-
-                      <figure class="author-img">
-                        <img src="./assets/images/bidding-user.png" alt="Jack Reacher">
-                      </figure>
-
-                      <div class="author-content">
-                        <h4 class="h5 author-title">Jack R</h4>
-
-                        <a href="#" class="author-username">@jackr</a>
-                      </div>
-
-                    </div>
-
-                    <div class="product-price">
-                      <data value="0.568">10 Modules</data>
-
-                      <p class="label">Current Bid</p>
-                    </div>
-
-                  </div>
 
                   <div class="product-footer">
-                    <p class="total-bid">12+ Place Bid.</p>
+                    <p class="total-bid">12+ Redeem.</p>
 
-                    <button class="tag">Redeem</button>
+                    <button class="tag">$10</button>
                   </div>
 
                 </div>
@@ -669,7 +554,7 @@
                     </button>
                   </div>
 
-                  <button class="place-bid-btn">Place bid</button>
+                  <button class="place-bid-btn">Redeem</button>
 
                 </figure>
 
@@ -677,34 +562,11 @@
 
                   <a href="#" class="h4 product-title">Dimond riding a blue body art</a>
 
-                  <div class="product-meta">
-
-                    <div class="product-author">
-
-                      <figure class="author-img">
-                        <img src="./assets/images/bidding-user.png" alt="Jack Reacher">
-                      </figure>
-
-                      <div class="author-content">
-                        <h4 class="h5 author-title">Jack R</h4>
-
-                        <a href="#" class="author-username">@jackr</a>
-                      </div>
-
-                    </div>
-
-                    <div class="product-price">
-                      <data value="0.568">7 Modules</data>
-
-                      <p class="label">Current Bid</p>
-                    </div>
-
-                  </div>
 
                   <div class="product-footer">
-                    <p class="total-bid">12+ Place Bid.</p>
+                    <p class="total-bid">12+ Redeem.</p>
 
-                    <button class="tag">Redeem</button>
+                    <button class="tag">$10</button>
                   </div>
 
                 </div>
@@ -731,7 +593,7 @@
                     </button>
                   </div>
 
-                  <button class="place-bid-btn">Place bid</button>
+                  <button class="place-bid-btn">Redeem</button>
 
                 </figure>
 
@@ -739,34 +601,11 @@
 
                   <a href="#" class="h4 product-title">Dimond riding a blue body art</a>
 
-                  <div class="product-meta">
-
-                    <div class="product-author">
-
-                      <figure class="author-img">
-                        <img src="./assets/images/bidding-user.png" alt="Jack Reacher">
-                      </figure>
-
-                      <div class="author-content">
-                        <h4 class="h5 author-title">Jack R</h4>
-
-                        <a href="#" class="author-username">@jackr</a>
-                      </div>
-
-                    </div>
-
-                    <div class="product-price">
-                      <data value="0.568">15 Modules</data>
-
-                      <p class="label">Current Bid</p>
-                    </div>
-
-                  </div>
 
                   <div class="product-footer">
-                    <p class="total-bid">12+ Place Bid.</p>
+                    <p class="total-bid">12+ Redeem.</p>
 
-                    <button class="tag">Redeem</button>
+                    <button class="tag">$10</button>
                   </div>
 
                 </div>
@@ -793,7 +632,7 @@
                     </button>
                   </div>
 
-                  <button class="place-bid-btn">Place bid</button>
+                  <button class="place-bid-btn">Redeem</button>
 
                 </figure>
 
@@ -801,34 +640,11 @@
 
                   <a href="#" class="h4 product-title">Dimond riding a blue body art</a>
 
-                  <div class="product-meta">
-
-                    <div class="product-author">
-
-                      <figure class="author-img">
-                        <img src="./assets/images/bidding-user.png" alt="Jack Reacher">
-                      </figure>
-
-                      <div class="author-content">
-                        <h4 class="h5 author-title">Jack R</h4>
-
-                        <a href="#" class="author-username">@jackr</a>
-                      </div>
-
-                    </div>
-
-                    <div class="product-price">
-                      <data value="0.568">7 Modules</data>
-
-                      <p class="label">Current Bid</p>
-                    </div>
-
-                  </div>
 
                   <div class="product-footer">
-                    <p class="total-bid">12+ Place Bid.</p>
+                    <p class="total-bid">12+ Redeem.</p>
 
-                    <button class="tag">Redeem</button>
+                    <button class="tag">$10</button>
                   </div>
 
                 </div>
