--- a/website/quizzes/game.html
+++ b/website/quizzes/game.html
@@ -4,21 +4,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Skill Level Cards</title>
-    <link rel="stylesheet" href="./game.css">
+    <link rel="stylesheet" href="./css/game.css">
 </head>
 <body>
     <div class="card-container">
-        <div class="card beginner">
-            <h2>Beginner</h2>
-            <p>This level is suitable for those who are new to the subject and have little to no prior experience.</p>
+        <div class="card beginner" href="./beginner.html">
+        <a href="./beginner.html" style="text-decoration: none; color: azure;">
+            <h2 class="head">Beginner</h2>
+            <p class="content">This level is suitable for those who are new to the subject and have little to no prior experience.</p>
         </div>
         <div class="card intermediate">
-            <h2>Intermediate</h2>
-            <p>This level is geared towards those who have a basic understanding of the subject and are looking to improve their skills.</p>
+            <a href="./intermediate.html" style="text-decoration: none; color: azure;">
+            <h2 class="head">Intermediate</h2>
+            <p class="content">This level is geared towards those who have a basic understanding of the subject and are looking to improve their skills.</p>
         </div>
         <div class="card advanced">
-            <h2>Advanced</h2>
-            <p>This level is designed for those who are proficient in the subject and are looking to challenge themselves further.</p>
+            <a href="./advanced.html" style="text-decoration: none; color: azure;">
+                <h2 class="head">Advanced</h2>
+            <p class="content">This level is designed for those who are proficient in the subject and are looking to challenge themselves further.</p>
+            </a>
         </div>
     </div>
 </body>
