--- a/website/quizzes/intermediate.html
+++ b/website/quizzes/intermediate.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Quiz App</title>
-    <link rel="stylesheet" href="./intermediate.css">
+    <link rel="stylesheet" href="./css/intermediate.css">
     
 </head>
 <body>
@@ -23,6 +23,6 @@
         <button id="next-btn">Next</button>  
     </div>
 </div>
-<script src="./intermediate.js"></script>
+<script src="./js/intermediate.js"></script>
 </body>
 </html>
