--- a/website/quizzes/leaderboard.html
+++ b/website/quizzes/leaderboard.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <link rel="stylesheet" href="./leaderboard.css">
+    <link rel="stylesheet" href="./css/leaderboard.css">
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <meta charset="UTF-8" />
@@ -25,29 +25,29 @@
         <table>
           <tr>
             <td class="number">1</td>
-            <td class="name">Lee Taeyong</td>
+            <td class="name">Abhishek Chaudhary</td>
             <td class="points">
               258.244 <img class="gold-medal" src="https://github.com/malunaridev/Challenges-iCodeThis/blob/master/4-leaderboard/assets/gold-medal.png?raw=true" alt="gold medal"/>
             </td>
           </tr>
           <tr>
             <td class="number">2</td>
-            <td class="name">Mark Lee</td>
+            <td class="name">Vanshika</td>
             <td class="points">258.242</td>
           </tr>
           <tr>
             <td class="number">3</td>
-            <td class="name">Xiao Dejun</td>
+            <td class="name">Srishti Sharma</td>
             <td class="points">258.223</td>
           </tr>
           <tr>
             <td class="number">4</td>
-            <td class="name">Qian Kun</td>
+            <td class="name">Archit Jain</td>
             <td class="points">258.212</td>
           </tr>
           <tr>
             <td class="number">5</td>
-            <td class="name">Johnny Suh</td>
+            <td class="name">Swayam Khanduri</td>
             <td class="points">258.208</td>
           </tr>
         </table>
