--- a/website/quizzes/beginner.html
+++ b/website/quizzes/beginner.html
@@ -1,35 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Quick Quiz - Play</title>
-    <link rel="stylesheet" href="app.css" />
-    <link rel="stylesheet" href="./beginner.css" />
-  </head>
-  <body>
-    <div class="container">
-      <div id="game" class="justify-center flex-column">
-        <h2 id="question">What is the answer to this questions?</h2>
-        <div class="choice-container">
-          <p class="choice-prefix">A</p>
-          <p class="choice-text" data-number="1">Choice 1</p>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Quiz App</title>
+    <link rel="stylesheet" href="./css/beginner.css">
+    
+</head>
+<body>
+<div class="app">
+    <!-- <div class="quest-head" style="display: flex; flex-direction: row-reverse; justify-content: space-between;">
+        <div id="timer">00:00</div> -->
+    <h1>Quests</h1>
+    <div class="quiz">
+        <h2 id="question">Sample Question</h2>
+        <div id="answer-buttons">
+            <button class="btn">Ans1</button>
+            <button class="btn">Ans2</button>
+            <button class="btn">Ans3</button>
+            <button class="btn">Ans4</button>
         </div>
-        <div class="choice-container">
-          <p class="choice-prefix">B</p>
-          <p class="choice-text" data-number="2">Choice 2</p>
-        </div>
-        <div class="choice-container">
-          <p class="choice-prefix">C</p>
-          <p class="choice-text" data-number="3">Choice 3</p>
-        </div>
-        <div class="choice-container">
-          <p class="choice-prefix">D</p>
-          <p class="choice-text" data-number="4">Choice 4</p>
-        </div>
-      </div>
+        <button id="next-btn">Next</button>  
     </div>
-    <script src="./beginner.js"></script>
-  </body>
+</div>
+<script src="./js/beginner.js"></script>
+</body>
 </html>
