--- a/website/quizzes/quiz.html
+++ b/website/quizzes/quiz.html
@@ -4,16 +4,16 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Quick Quiz</title>
-    <link rel="stylesheet" href="styles.css" />
+    <title>ARCADE</title>
+    <link rel="stylesheet" href="./css/quiz.css" />
   </head>
   <body>
     <div class="container">
       <div id="home" class="flex-center flex-column">
-        <h1>Quick Quiz</h1>
+        <h1 class="arc">ARCADE</h1>
         <a class="btn" href="./game.html">Play</a>
         <a class="btn" href="./leaderboard.html">Leaderboard</a>
-        <a class="btn" href="#redeem">Redeem Points</a>
+        <a class="btn" href="../marketPlace/marketPlace.html">Redeem Points</a>
       </div>
     </div>
   </body>
